# DF

./: .replit  app.py  app_genuine.py  app_lite.py  config.py  deepfake_models.py  enhanced_detection.py  openai_deepfake_detector.py  pyproject.toml  replit  replit.md
.streamlit/: config.toml
backend/: detector.py  main.py  models.py  simple_detector.py
detectors/: face_detector.py  frequency_analyzer.py  temporal_analyzer.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: FileUpload.tsx  Header.tsx  ResultsDisplay.tsx  SettingsPanel.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
models/: mesonet.py  xception_detector.py
utils/: confidence_scorer.py  image_processor.py  timeline_visualizer.py  video_processor.py
