[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Deep Fake Detection System - Streamlit Web Application"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.49.1",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "plotly>=5.15.0",
    "opencv-python>=4.11.0.86",
]
